--- a/test.html
+++ b/test.html
@@ -3,75 +3,77 @@
     <head>
         <meta charset="utf-8">
         <!-- Styles -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css" integrity="sha384-72FuSDrdBU83LuAcJOOJ5tFU9kXIOLW+7XCpfoksrHUBWYk8qe+XG+f4gJ5X+wta" crossorigin="anonymous">
         <!-- Scripts -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     </head>
 
     <body >
-        <div>Testing editable table</div>
-
-        <div class="table-content">
-            <table class="table table-borded table-responsive table-striped " id="table-list">
-                <thead class="table-dark">
-                    <tr>
-                        <th>Name</th>
-                        <th>Gental</th>
-                        <th>email</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>James</td>
-                        <td>Male</td>
-                        <td>jhsdfgh@hotmail.com</td>
-                    </tr>
-                    <tr>
-                        <td>Sams</td>
-                        <td>Male</td>
-                        <td>hhfdfg@hotmail.com</td>
-                    </tr>
-                    <tr>
-                        <td>Mary</td>
-                        <td>Female</td>
-                        <td>vccch@gmail.com</td>
-                    </tr>
-                    <tr>
-                        <td>Ashly</td>
-                        <td>Female</td>
-                        <td>asss@gmail.com</td>
-                    </tr>
-                    <tr>
-                        <td>Eden</td>
-                        <td>Male</td>
-                        <td>edd@hotmail.com</td>
-                    </tr>
-                </tbody>
-            </table>
+        <br/>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Bootstable - Tiny Utility for Producing Editable Tables</div>
+                            <p class="card-text">
+                                <table class="table table-borded table-responsive table-striped " id="table-list">
+                                    <thead class="table-dark">
+                                        <tr>
+                                            <th>Character</th>
+                                            <th>Origin</th>
+                                            <th>Year</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>Iron Man</td>
+                                            <td>Self Invented Suit.</td>
+                                            <td>1963</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Thor</td>
+                                            <td>God of Thunder</td>
+                                            <td>Pre-history</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Captain America</td>
+                                            <td>Result of Super Soldier Experiments in WW2</td>
+                                            <td>1941</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Hulk</td>
+                                            <td>Exposure to Gamma Radiation</td>
+                                            <td>1962</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Ant-Man</td>
+                                            <td>Created using Pym Particles and Suit Tech</td>
+                                            <td>1962</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <button class="btn btn-secondary" id="exportcsv">Export CSV</button>
-        <button class="btn btn-secondary" id="exportjson">Export JSON</button>
-        <br>
 
         <script src="bootstable.js"></script>
         <script>
             //apply
             const bstable = new bootstable("table-list", {
                 $addButton: "but-add",
-                columnsEd: [1, 2]
+                columnsEd: [
+                    0, 1, 2
+                ],
+                exportJsonButton: true,
+                exportCsvButton: true,
+                defaultValues: ["Wasp", "Partner to Ant-Man", "1963"]
             });
-            document
-                .getElementById('exportcsv')
-                .addEventListener("click", () => {
-                    console.log(bstable.TableToCSV("table-list", ",", true, "sample.csv"))
-                });
-            document
-                .getElementById('exportjson')
-                .addEventListener("click", () => {
-                    bstable.TableToJson("table-list", true, "sample.json")
-                });
         </script>
     </body>
 </html>
